# uglymidi

./: MANIFEST.in  pyproject.toml  requirements.txt  setup.py  song.json  song.mid  ugly_midi.py
tests/: test_converted.json  test_ensemble.mid  test_library_usage.py  test_original.json  test_tempo_120.mid  test_tempo_200.mid  test_ugly_midi.py
tests/flask/: main.py
tests/flask/templates/: index.html
ugly_midi/: __init__.py  cli.py  converter.py
